--- a/structure.html
+++ b/structure.html
@@ -3,6 +3,8 @@
 
 <head>
      <meta charset="utf-8">
+     <link rel="stylesheet" href=./style.css>
+     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@700&display=swap" rel="stylesheet">
      <title>Структура html</title>
 
 </head>
@@ -10,7 +12,7 @@
 <body>
   <header>
     <div>app.creation</div>
-    <nav>
+    <nav class="list">
       <a>start</a>
       <a>services</a>
       <a>about</a>
@@ -21,8 +23,8 @@
 
   <section>
     <main>
-      <h1>Building an App Without Design Expertise?</h1>
-      <p>I help tech startups design better digital product without hiring a full-time designer</p>
+      <h1 class="qwe">Building an App Without Design Expertise?</h1>
+      <p class="z">I help tech startups design better digital product without hiring a full-time designer</p>
       <button>Schedule free consultation</button>
     </main>
     <div>
