--- a/structure.html
+++ b/structure.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -24,7 +24,7 @@
   <section>
     <main>
       <h1 class="qwe">Building an App Without Design Expertise?</h1>
-      <p class="z">I help tech startups design better digital product without hiring a full-time designer</p>
+      <p class="w">I help tech startups design better digital product without hiring a full-time designer</p>
       <button>Schedule free consultation</button>
     </main>
     <div>
