--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
      <meta charset="utf-8">
-     <link rel="stylesheet" href=./style.css>
+     <title>app.creation</title>
+     <!--<link rel="stylesheet" href=./style.css>-->
      <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@700&display=swap" rel="stylesheet">
-     <title>Структура html</title>
+     <link rel="stylesheet" href="fonts.css">
+     <link rel="stylesheet" href=style.css>
 
 </head>
 
 <body>
   <header class="header">
-    <div class="logo">app.creation</div>
+    <div class="logo"></div>
     <nav class="menu">
       <a class="menu__item" href="#">start</a>
       <a class="menu__item" href="#">services</a>
