--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
      <meta charset="utf-8">
      <title>app.creation</title>
      <!--<link rel="stylesheet" href=./style.css>-->
-     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@700&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="fonts.css">
      <link rel="stylesheet" href=style.css>
 
