--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
      <meta charset="utf-8">
      <title>app.creation</title>
-     <!--<link rel="stylesheet" href=./style.css>-->
      <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="fonts.css">
@@ -19,7 +18,7 @@
       <a class="menu__item" href="#">services</a>
       <a class="menu__item" href="#">about</a>
       <a class="menu__item" href="#">blog</a>
-      <a class="menu__item" href="#">contact us</a>
+      <a class="menu__item menu__item_active" href="#">contact us</a>
     </nav>
   </header>
 
