--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
      <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>app.creation</title>
      <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
       <span class="main__title-text_highlight"> Without Design Expertise?
       </span>
     </h1>
-    <p class="main__subtitle">I help tech startups design better digital product without hiring a full-time designer</p>
+    <p class="main__subtitle">I help tech startups design better digital product without hiring a&nbsp;full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
   </section>
 </body>
