--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body>
   <header class="header">
     <div class="logo"></div>
+    <div class="hamburger-menu">
+  <input id="menu__toggle" type="checkbox" />
+  <label class="menu__btn" for="menu__toggle">
+    <span></span>
+  </label>
     <nav class="menu">
       <a class="menu__item" href="#">start</a>
       <a class="menu__item" href="#">services</a>
@@ -21,13 +26,14 @@
       <a class="menu__item" href="#">blog</a>
       <a class="menu__item" href="#">contact us</a>
     </nav>
+  </div>
   </header>
   <section class="main">
     <h1 class="main__title">Building an App
       <span class="main__title-text_highlight"> Without Design Expertise?
       </span>
     </h1>
-    <p class="main__subtitle">I help tech startups design better digital product without hiring a&nbsp;full-time designer</p>
+    <p class="main__subtitle">I help tech startups design better digital product without hiring a full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
   </section>
 </body>
