--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>app.creation</title>
      <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="fonts.css">
      <link rel="stylesheet" href=style.css>
 
@@ -21,7 +21,7 @@
   </label>
     <nav class="menu">
       <a class="menu__item" href="#">start</a>
-      <a class="menu__item" href="#">services</a>
+      <a class="menu__item menu__item_active" href="#">services</a>
       <a class="menu__item" href="#">about</a>
       <a class="menu__item" href="#">blog</a>
       <a class="menu__item" href="#">contact us</a>
