--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <span class="main__title-text_highlight"> Without Design Expertise?
       </span>
     </h1>
-    <p class="main__subtitle">I help tech startups design better digital product without hiring a full-time designer</p>
+    <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
   </section>
 </body>
