--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="square"></div>
   <header class="header">
     <div class="logo"></div>
     <div class="hamburger-menu">
