--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
   </header>
   <section class="main">
     <h1 class="main__title">Building an App
-      <span class="main__title-text_highlight"> Without Design Expertise?
+      <span class="main__title-text_highlight_1"> Without Design
+      </span>
+      <span class="main__title-text_highlight_2"> Expertise?
       </span>
     </h1>
     <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
   </section>
+  <div class="circle_1"></div>
+  <div class="circle_2"></div>
+  <div class="circle_3"></div>
 </body>
 
 </html>
